<resources>
    <string name="app_name">T-Travelling</string>
    <string name="logo">логотип</string>
    <string name="phone">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="back">Назад</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="error_phone_empty">Телефон не может быть пустым</string>
    <string name="error_password_empty">Пароль не может быть пустым</string>
    <string name="incorrect_email_or_password">Неверная почта или пароль</string>
    <string name="my_trips">Мои путeшествия</string>
    <string name="add">Добавить</string>
    <string name="account_page">Профиль</string>
    <string name="error_invalid_phone">Неверный номер телефона</string>
    <string name="error_first_name_empty">Имя не может быть пустым</string>
    <string name="error_first_name_invalid">Имя должно начинаться с заглавной буквы и содержать только буквы, пробелы, \' или -</string>
    <string name="error_last_name_empty">Фамилия не может быть пустой</string>
    <string name="error_last_name_invalid">Фамилия должна начинаться с заглавной буквы и содержать только буквы, пробелы, \' или -</string>
    <string name="error_invalid_password">Пароль должен содержать не менее 6 и не более 15 символов, заглавную букву и цифру</string>
    <string name="error_password_mismatch">Пароли не совпадают</string>
    <string name="error_user_already_exists">Пользователь с этим номером телефона уже существует</string>
    <string name="error_unknown">Произошла неизвестная ошибка. Пожалуйста, повторите попытку позже.</string>
    <string name="authorization">Авторизация</string>
    <string name="price_0">0 ₽</string>
    <string name="price">%s ₽</string>
    <string name="trip_dates">"%1$s - %2$s"</string>
    <string name="transactions">Транзакции</string>
    <string name="participants">Участники</string>
    <string name="admin_required">Требуется администратор</string>
    <string name="only_admin_can_edit">Редактирование доступно только администратору поездки</string>
    <string name="close">Закрыть</string>
    <string name="leave_trip_title">Покинуть поездку</string>
    <string name="leave_trip_message">Вы уверены, что хотите покинуть поездку?</string>
    <string name="delete_trip_title">Удалить поездку</string>
    <string name="delete_trip_message">Вы уверены, что хотите удалить поездку у всех участников?</string>
    <string name="leave">Покинуть</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>

    <string name="select_start_date">Выберите дату начала путешествия</string>
    <string name="select_end_date">Выберите дату окончания путешествия</string>
    <string name="select_participants">Выберите участников</string>
    <string name="permission_required">Требуется разрешение</string>
    <string name="contacts_permission_explanation">Для выбора участников из контактов необходимо разрешение</string>
    <string name="grant_permission">Дать разрешение</string>


    <!-- arrays.xml -->
    <string-array name="months_genitive">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>


    <string name="contacts_permission_denied">Для выбора контактов необходимо разрешение</string>
    <string name="contact_has_no_phone">У контакта нет номера телефона</string>
    <string name="contacts_app_not_found">Не найдено приложение для работы с контактами</string>
    <string name="select_phone_number_for">Выберите номер для %s</string>

    <string name="permission_denied">Для добавления участников необходимо разрешение на доступ к контактам</string>
    <string name="permission_permanently_denied_message">Вы запретили доступ к контактам навсегда. Пожалуйста, предоставьте разрешение в настройках приложения</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="settings_open_error">Не удалось открыть настройки</string>
    <string name="name_of_the_trip">Название путешествия</string>
    <string name="initial_cost">Начальная стоимость</string>
    <string name="dates">Даты</string>
    <string name="beginning">Начало:</string>
    <string name="the_end">Конец:</string>
    <string name="add_contacts">Добавить контакты</string>
    <string name="create">Создать</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="select_the_participants">Выберите участников</string>
    <string name="done">Готово</string>
    <string name="select_at_least_one_contact">Выберите хотя бы один контакт</string>
    <string name="enter_the_name_of_the_trip">Введите название путешествия</string>
    <string name="enter_the_cost">Введите стоимость</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="invitation_accepted">Приглашение принято </string>

    <!--Errors-->
    <string name="error_title_validation_registration">Ошибка регистрации</string>
    <string name="error_bad_request_registration">Пользователь с таким номером телефона уже зарегистрирован.</string>
    <string name="error_title_auth">Ошибка авторизации</string>
    <string name="error_title_server">Ошибка сервера</string>
    <string name="error_title_network">Сетевая ошибка</string>
    <string name="error_title_unknown">Неизвестная ошибка</string>
    <string name="error_unauthorized_authorization">Неверный логин или пароль.</string>
    <string name="error_forbidden">У вас нет разрешения на выполнение этого действия.</string>
    <string name="error_not_found_trip">Поездка не найдена.</string>
    <string name="error_server">Пожалуйста, повторите попытку позже.</string>
    <string name="error_network">Нет подключения к Интернету.</string>
    <string name="error_bad_request_add">Неверные данные. Проверьте ввод и попробуйте снова.</string>
    <string name="error_unauthorized_trip">Вы не авторизованы. Войдите в аккаунт и попробуйте снова.</string>
    <string name="error_conflict">Создатель поездки не может удалить себя.</string>
    <string name="edit_profile">Редактирование профиля</string>
    <string name="error_bad_request_profile">Пользователь не найден.</string>

    <!-- Profile Screen -->
    <string name="profile_title">Профиль</string>
    <string name="archive_trips">Архив поездок</string>
    <string name="change_language">Сменить язык</string>
    <string name="dark_theme">Темная тема</string>
    <string name="logout">Выйти из профиля</string>
    <string name="logout_title">Выход</string>
    <string name="logout_confirmation">Вы уверены, что хотите выйти из профиля?</string>
    <string name="error_logout">Ошибка при выходе из профиля</string>
    <string name="change_language_title">Выберите язык</string>
    <string name="language_russian">Русский</string>
    <string name="language_english">Английский</string>

    <!-- Transactions Screen -->
    <string name="error_not_found_transactions">Tранзакции не найдены</string>
    <string name="transaction_history">История транзакций</string>
    <string name="adding_transaction">Добавление транзакции</string>
    <string name="no_transactions_message">Здесь будут ваши транзакции</string>
    <string name="error_category_empty">Пожалуйста, выберите категорию</string>
    <string name="error_invalid_amount">Пожалуйста, введите сумму больше нуля </string>
    <string name="error_description_empty">Описание не может быть пустым</string>
    <string name="error_no_participants">Пожалуйста, добавьте хотя бы одного участника</string>
    <string name="error_participants_not_in_travel">Некоторые участники не участвуют в этом путешествии</string>
    <string name="error_shares_not_match_total">Сумма задолженностей должна быть равна общей сумме</string>
    <string name="select_category">Выберите категорию</string>
    <string name="add_description_transaction">Добавьте описание к транзакции</string>
    <string name="enter_cost">Введите стоимость</string>
    <string name="pay_to">Заплатить</string>
    <string name="rub">₽</string>
    <string name="error_not_found_transaction">Транзакция не найдена</string>
    <string name="message_delete_not_creator">Удаление доступно только создателю этой транзакции</string>
    <string name="delete_transaction">Удалить транзакцию</string>
    <string name="message_delete_creator">Вы уверены, что хотите удалить транзакцию у всех участников?</string>
    <string name="pay_debt">Оплатить долг</string>
    <string name="creator_transaction">Создатель транзакции</string>
    <string name="photo_creator">Фото создателя</string>
    <string name="debt_data">Данные о долгах</string>
    <string name="category_transport">Транспорт</string>
    <string name="category_accommodation">Проживание</string>
    <string name="category_food">Питание</string>
    <string name="category_entertainment">Развлечения</string>
    <string name="category_shopping">Покупки</string>
    <string name="category_health">Здоровье</string>
    <string name="category_communication">Связь и интернет</string>
    <string name="category_visa_documents">Виза и документы</string>
    <string name="category_other">Прочее</string>
    <string name="remind">Напомнить</string>
    <string name="pay_the_debt">Оплатить долг</string>
    <string name="message_edit_not_creator">Редактирование доступно только создателю этой транзакции</string>
    <string name="reminder_sent_successfully">Напоминания отправлены успешно</string>

    <string name="default_notification_channel_id"> default channel </string>
    <string name="accept_invitation">Принять приглашение</string>
    <string name="refuse">Отказаться</string>

    <string-array name="transaction_categories">
        <item>Питание</item>
        <item>Транспорт</item>
        <item>Проживание</item>
        <item>Развлечения</item>
        <item>Покупки</item>
        <item>Здоровье</item>
        <item>Связь и интернет</item>
        <item>Виза и документы</item>
        <item>Прочее</item>
    </string-array>

</resources>