<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_photo_person"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo_profile"
        android:elevation="2dp"
        android:foreground="@drawable/ripple_effect"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ImageView>

    <TextView
        android:id="@+id/tv_userFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        app:layout_constraintStart_toEndOf="@id/iv_photo_person"
        tools:text="Иван"/>

    <TextView
        android:id="@+id/tv_userLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="28dp"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        app:layout_constraintStart_toEndOf="@id/tv_userFirstName"
        tools:text="Иванов"/>

    <TextView
        android:id="@+id/tv_userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/hint_color"
        android:layout_marginTop="4dp"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_userFirstName"
        app:layout_constraintStart_toEndOf="@id/iv_photo_person"
        tools:text="+7 (923) 456-78-90"/>

    <ImageView
        android:id="@+id/btn_editProfile"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="88dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintBottom_toTopOf="@id/tv_archiveItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_archive"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:srcCompat="@drawable/ic_archive"
        app:tint="?attr/colorOnBackground"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_photo_person"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_32dp"/>

    <TextView
        android:id="@+id/tv_archiveItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/archive_trips"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="20dp"
        app:layout_constraintStart_toEndOf="@id/iv_archive"
        app:layout_constraintTop_toTopOf="@id/iv_archive"
        app:layout_constraintBottom_toBottomOf="@id/iv_archive"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint_color"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_archiveItem"/>

    <ImageView
        android:id="@+id/iv_language"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="@dimen/margin_16dp"
        app:srcCompat="@drawable/ic_language"
        app:tint="?attr/colorOnBackground"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_languageItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="20dp"
        app:layout_constraintStart_toEndOf="@id/iv_language"
        app:layout_constraintTop_toTopOf="@id/iv_language"
        app:layout_constraintBottom_toBottomOf="@id/iv_language"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint_color"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_languageItem"/>

    <ImageView
        android:id="@+id/iv_theme"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="@dimen/margin_16dp"
        app:srcCompat="@drawable/ic_theme"
        app:tint="?attr/colorOnBackground"
        android:layout_marginStart="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_themeItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="20dp"
        app:layout_constraintStart_toEndOf="@id/iv_theme"
        app:layout_constraintTop_toTopOf="@id/iv_theme"
        app:layout_constraintBottom_toBottomOf="@id/iv_theme"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Switch
        android:id="@+id/theme_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:checked="false"
        android:elevation="4dp"
        android:background="@drawable/switch_background"
        app:thumbTint="@drawable/switch_thumb_selector"
        app:trackTint="@drawable/switch_track_selector"
        app:layout_constraintBottom_toBottomOf="@id/tv_themeItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_themeItem"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint_color"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_themeItem"/>

    <ImageView
        android:id="@+id/iv_logout"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:src="@drawable/ic_leave"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/divider3"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/logoutItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textColor="@color/red"
        android:padding="20dp"
        app:layout_constraintStart_toEndOf="@id/iv_logout"
        app:layout_constraintTop_toTopOf="@id/iv_logout"
        app:layout_constraintBottom_toBottomOf="@id/iv_logout"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>